tests/snapshots/run_wpt_conformance__litert_gatherND_float32_rank-5_input_and_rank-5_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gatherND.https.any.js",
    "gatherND float32 rank-5 input and rank-5 indices",
    "litert",
    "PASS",
)
